DOE dispatcher + Python worker + execution scripts + Cursor integration

--- a/systems/doe-engine/directives/.template.md
+++ b/systems/doe-engine/directives/.template.md
@@ -11,16 +11,30 @@
 
 ## 3. PROCESS
 
-### Phase 1: [Phase Name]
-1. [Step 1 - what to do]
-2. [Step 2 - what to do]
-3. [Step 3 - what to do]
+### Phase 1: Orchestration (Decision Making)
+1. **Check for existing directive** (if applicable - this directive should already exist)
+2. **For coding/development work:**
+   - Create detailed blueprint with:
+     * Objectives: Clear goals and expected outcomes
+     * Proposed Changes: Specific files and modifications
+     * Logic/Edge Cases: All scenarios to handle
+     * FE/BE Separation: Clear frontend/backend boundaries
+     * Dependencies: Required libraries, services, or data
+   - **WAIT FOR EXPLICIT HUMAN APPROVAL** before proceeding to execution
+3. **For deterministic work:**
+   - Use existing execution scripts/MCPs
+   - Call scripts in correct order as specified below
+4. **Handle errors and self-anneal:**
+   - When errors occur: Fix script → Test → Update this directive with learnings
+   - When improvements discovered: Update directive with new constraints/approaches
+   - Document fixes in workflow_state.md or this directive's "Learnings" section
 
-### Phase 2: [Phase Name]
-1. [Step 1 - what to do]
-2. [Step 2 - what to do]
-
-[Add more phases as needed]
+### Phase 2: Execution
+1. **If blueprint approved:** Implement according to approved blueprint
+2. **If using scripts:** Execute deterministic scripts/MCPs in order:
+   - [List script execution order here]
+3. **Verify outputs** match expected results
+4. **Self-anneal:** Update directive with any learnings from execution
 
 ## 4. OUTPUTS
 - [What gets created/changed - be specific]
